2007-04-14  Stipe Tolj  <stolj at kannel.org>
   * gwlib/octstr.c: imunize octstr_truncate() for NULL argument. Currently
     this would cause a panic when charset_utf8_to_gsm(NULL) is called. Now
     same safety bail-out behaviour as octstr_insert().

2007-04-11 Alexander Malysh <amalysh at kannel.org>
   * gw/sms.c: fixed #397 that smsbox blocked HTTP requests.

2007-04-04  Stipe Tolj  <stolj at kannel.org>
   * configure[.in]: modified the docbook.dsl search path to be more generic
     since some distros have more recent version paths (ie. 1.79 for FC5 on 
     x86_86 architectures), and we don't want to sum up every single version.
     We relly on any match we get in the for shell loop and continue.

2007-04-03  Stipe Tolj  <stolj at kannel.org>
   * doc/userguide/userguide.xml: documented change of 'smsbox-route' group
     logic from the commit on 2007-02-27.

2007-04-03 Alexander Malysh <amalysh at kannel.org>
   * gw/dlr.h: changed DLR_SMSC_FAIL back to 0x10.
     Thanks to Ben Suffolk <ben at vanilla.net> for patch.

2007-04-02 Alexander Malysh <amalysh at kannel.org>
   * gwlib/octstr.c: prevent possible heap smashing

2007-03-30 Alexander Malysh <amalysh at kannel.org>
   * wap/wsp_caps.c: fixed possible heap smashing.

2007-02-27  Stipe Tolj  <stolj at kannel.org>
(CB) * gwlib/cfg.def, gw/bb_boxc.c: re-defining logic for the 'smsbox-route' group
     that is used for MO routing to different (identified) smsbox connections.
     We know support the splitting of shortcodes depending on various source
     smsc-ids to various smsbox connections. So this behaviour is more generic
     then the one before. The naming convention changed, this needs to be noted
     in the NEWS file for upcoming relase.
     [Msg-Id: <45C25496.4020003@tolj.org>]
     
2007-02-27  Stipe Tolj  <stolj at kannel.org>
   * gw/smsc/emimsg.[ch]: adding function emimsg_duplicate() to allow
     duplication of the struct. This is usefull in various ways and places.
